<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2007 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
  
          http://www.apache.org/licenses/LICENSE-2.0
  
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<resources>
	<string name="app_name">Handheld Football</string>
	<string name="menu_new_game">New Game</string>
	<string name="menu_settings">Settings</string>
	<string name="menu_about">About</string>
	<string name="menu_quit">Quit</string>
	<string name="confirm_yes">Yes</string>
	<string name="confirm_no">No</string>
	<string name="confirm_exit_game">Are you sure you wan\'t to exit the current game?</string>
	<string name="scoreboard_home">HOME</string>
	<string name="scoreboard_visitor">VISTIOR</string>
	<string name="scoreboard_clock">TIME REMAINING</string>
	<string name="scoreboard_period">QTR</string><string name="scoreboard_down">DOWN</string>
	<string name="scoreboard_yards_to_go">YARDS TO GO</string>
	<string name="scoreboard_field_pos">FIELD POSITION</string>
	<string name="info_change_sides">Change Sides</string>
	<string name="info_kickoff">Kickoff</string>
	<string name="info_punt">Punt</string>
	<string name="info_field_goal">Field Goal</string>
	<string name="info_field_goal_miss">No Good</string>
	<string name="info_field_goal_make">Its Good!</string>
	<string name="info_touchdown">TOUCHDOWN!</string>
	<string name="info_safety">Safety</string>
	<string name="info_freekick">Free Kick</string>
	<string name="info_kick_return">Kick Return</string>	
	<string name="info_touchback">Touchback</string>
	<string name="info_interception">Interception</string>
	<string name="info_incomplete">Incomplete</string>
	<string name="info_first_down">1st Down</string>
	<string name="info_second_down">2nd Down</string>
	<string name="info_third_down">3rd Down</string>
	<string name="info_fourth_down">4th Down</string>
	<string name="info_turnover_on_downs">Turnover On Downs</string>
	<string name="info_end_of_first_quarter">End of 1st Quarter</string>
	<string name="info_halftime">Halftime</string>
	<string name="info_end_of_third_quarter">End of 3rd Quarter</string>
	<string name="info_game_over">Game Over</string>
	<string name="settings_title">HandHeld Football Settings</string>
	<string name="game_settings">Game Settings</string>
	<string name="setting_sound">Game Sounds</string>
	<string name="setting_sound_summary_on">Disable if you don\'t want game sounds</string>
	<string name="setting_sound_summary_off">Enable to hear game sounds</string>
	<string name="setting_sound_default_value">true</string>
	<string name="setting_vibrate">Vibrate on Tackle</string>
	<string name="setting_vibrate_summary_on">Disable if you don\'t want a vibration when tackled</string>
	<string name="setting_vibrate_summary_off">Enable to feel a vibration when tackled</string>
	<string name="setting_vibrate_default_value">true</string>
	<string name="setting_period_length">Period Length</string>
	<string name="setting_period_length_summary">Specifies number of minutes per quarter</string>
	<string-array name="setting_period_length_entries">
		<item>1 minute</item>
		<item>2 minutes</item>
		<item>4 minutes</item>
		<item>6 minutes</item>
		<item>8 minutes</item>
		<item>10 minutes</item>
	</string-array>	
	<string-array name="setting_period_length_entry_values">
		<item>1</item>
		<item>2</item>
		<item>4</item>
		<item>6</item>
		<item>8</item>
		<item>10</item>
	</string-array>	
	<string name="setting_period_length_default_value">4</string>
	<string name="setting_period_length_dialog_title">Select a period length</string>
	<string name="setting_difficulty">Difficulty</string>
	<string name="setting_difficulty_summary">Specifies the difficulty level</string>
	<string-array name="setting_difficulty_entries">
		<item>High School</item>
		<item>College</item>
		<item>Pro</item>
	</string-array>	
	<string-array name="setting_difficulty_entry_values">
		<item>easy</item>
		<item>medium</item>
		<item>hard</item>
	</string-array>	
	<string name="setting_difficulty_default_value">medium</string>
	<string name="setting_difficulty_dialog_title">Select a difficulty level</string>
	<string-array name="about_items">
		<item>How To Play</item>
        <item>Website</item>
		<item>Email Developer</item>
	</string-array>
	<string name="customization_settings">Customization Settings</string>
	<string name="uniform_chooser_setting_title">Uniforms</string>
	<string name="uniform_chooser_setting_summary">Select uniform colors</string>
	<string name="uniform_chooser_title">Select uniform colors</string>
	<string name="skin_chooser_setting_title">Skins</string>
	<string name="skin_chooser_setting_summary">Select a game skin</string>
	<string name="skin_chooser_title">Select a game skin</string>
    <string name="dev_website_url">http://www.facebook.com/RedPantsSoftware</string>
    <string name="dev_website_error_title">Error</string>
	<string name="dev_website_error_msg">No browser application found!</string>
	<string name="dev_email_address">redpantssoft@gmail.com</string>
	<string name="dev_email_subject">HandHeld Football Feedback</string>
	<string name="dev_email_error_title">Error</string>
	<string name="dev_email_error_msg">No email application found!</string>
	<string name="instructions">HandHeld Football is a new take on the classic electronic sports games of the \'70s and \'80s. 
	The computer controls the defense, you control the offense.\n\nKicking - The kick power meter indicates the kick power. Press 
	KICK, when the meter is active, to kick with the desired level.\n\nMove the quarterback backwards to snap the ball. Once the ball is snapped, the defense and your receiver
	will become active.\n\nPress PASS to throw a pass to your receiver. You can safely throw the ball over the head of defenders
	that are in the backfield. Otherwise, they will intercept the ball.\n\nPress the KICK button at the line of scrimmage to bring
	up the kick meter and attempt a field goal. The chance of making a field goal goes up with attempts from shorter distances, as
	well as the power of the kick.\n\nTo punt the ball, press kick after the ball is snapped to bring up the kick meter	and punt.\n\nThere 
	are 3 levels of difficulty that increase the speed and intelligence of the defense, as well as the accuracy of field goals.
	 </string>
</resources>
