<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
  
  	<PreferenceCategory
  		android:title="@string/game_settings">
  		
		<CheckBoxPreference
		  android:key="sound"
		  android:persistent="true"
		  android:title="@string/setting_sound"
		  android:summaryOn="@string/setting_sound_summary_on"
		  android:summaryOff="@string/setting_sound_summary_off"
		  android:defaultValue="@string/setting_sound_default_value"/>
		      
		<CheckBoxPreference
		  android:key="vibrate"
		  android:persistent="true"
		  android:title="@string/setting_vibrate"
		  android:summaryOn="@string/setting_vibrate_summary_on"
		  android:summaryOff="@string/setting_vibrate_summary_off"
		  android:defaultValue="@string/setting_vibrate_default_value"/>
		   
		<ListPreference
		  android:key="period_length"
		  android:persistent="true"
		  android:title="@string/setting_period_length"
		  android:summary="@string/setting_period_length_summary"
		  android:entries="@array/setting_period_length_entries"
		  android:entryValues="@array/setting_period_length_entry_values"
		  android:defaultValue="@string/setting_period_length_default_value"
		  android:dialogTitle="@string/setting_period_length_dialog_title"/>
		       
		<ListPreference
		  android:key="difficulty"
		  android:persistent="true"
		  android:title="@string/setting_difficulty"
		  android:summary="@string/setting_difficulty_summary"
		  android:entries="@array/setting_difficulty_entries"
		  android:entryValues="@array/setting_difficulty_entry_values"
		  android:defaultValue="@string/setting_difficulty_default_value"
		  android:dialogTitle="@string/setting_difficulty_dialog_title"/>
	</PreferenceCategory>
	
	<PreferenceCategory
  		android:title="@string/customization_settings">
  		
  		<com.redpantssoft.hhfootball.UniformChooser
		  android:key="uniform"
		  android:persistent="true"
		  android:title="@string/uniform_chooser_setting_title"
		  android:summary="@string/uniform_chooser_setting_summary"
		  android:dialogTitle="@string/uniform_chooser_title"
		  android:defaultValue="256"
		  android:dialogLayout="@layout/uniform_chooser"
		  android:positiveButtonText="Apply"
		  android:negativeButtonText="Cancel"/>
		  
		<com.redpantssoft.hhfootball.SkinChooser
		  android:key="skin"
		  android:persistent="true"
		  android:title="@string/skin_chooser_setting_title"
		  android:summary="@string/skin_chooser_setting_summary"
		  android:dialogTitle="@string/skin_chooser_title"
		  android:defaultValue="0"
		  android:dialogLayout="@layout/skin_chooser"
		  android:positiveButtonText="Apply"
		  android:negativeButtonText="Cancel"/>
	  
	  </PreferenceCategory>
	  
</PreferenceScreen>
