<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/LinearLayout01"
	android:layout_width="match_parent" 
	android:layout_height="match_parent"
	android:orientation="vertical">
	
	<TableLayout
		android:id="@+id/scoreboard"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_marginBottom="10dip">
		
		<TableRow>
			<TextView
				style="@style/scoreboard_label"
				android:layout_weight="25"
				android:text="@string/scoreboard_home"/>
			
			<TextView
				style="@style/scoreboard_label"
				android:layout_weight="45"
				android:text="@string/scoreboard_clock"/>
				
			<TextView
				style="@style/scoreboard_label"
				android:layout_weight="5"
				android:text="@string/scoreboard_period"/>
		
			<TextView
				style="@style/scoreboard_label"
				android:layout_weight="25"
				android:text="@string/scoreboard_visitor"/>
		</TableRow>
		
		<TableRow>
			<TextView
				android:id="@+id/scoreboard_home"
				android:layout_weight="25"
				style="@style/scoreboard"
				android:text="0"/>
			
			<TextView
				android:id="@+id/scoreboard_clock"
				android:layout_weight="45"
				style="@style/scoreboard"
				android:text="00:00.0"/>
			
			<TextView
				android:id="@+id/scoreboard_period"
				android:layout_weight="5"
				style="@style/scoreboard"
				android:text="1"/>
				
			<TextView
				android:id="@+id/scoreboard_visitor"
				android:layout_weight="25"
				style="@style/scoreboard"
				android:text="0"/>
		</TableRow>>
	
	</TableLayout>
	
	<com.jrggdev.hhfootball.HHFootballFieldView
	 	android:id="@+id/hhfootballview"
		android:layout_width="match_parent"
        android:layout_height="98dip"/>
		
    <TextView
    	android:id="@+id/status_view"
    	android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:gravity="center_horizontal"
		android:text="GAME OVER"/>
		
	<TextView
    	android:id="@+id/info_view"
    	android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:gravity="center_horizontal"
		android:text=""/>
    
    <RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"	
		android:layout_marginBottom="10dip"
		android:layout_marginLeft="10dip"
		android:layout_marginRight="10dip"
		android:background="@drawable/controller_background">
		
		
		<Button
			android:id="@+id/anchor"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:visibility="invisible"
			style="@style/button"
			android:layout_alignParentBottom="true"
			android:layout_alignParentRight="true"/>
			
		<Button
			android:id="@+id/middle"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:enabled="false"
			style="@style/button"
			android:layout_toLeftOf="@+id/anchor"
			android:layout_above="@+id/anchor"/>
			
		<Button
			android:id="@+id/down_button"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			style="@style/button"
			android:text="DOWN"
			android:onClick="onDown"
			android:layout_alignBottom="@+id/anchor"
			android:layout_toLeftOf="@+id/anchor"
			android:background="@drawable/down_button"/>
		
		<Button
			android:id="@+id/right_button"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			style="@style/button"
			android:text="RIGHT"
			android:onClick="onRight"
			android:layout_above="@+id/down_button"
			android:layout_toRightOf="@+id/down_button"
			android:background="@drawable/right_button"/>
				
		<Button
			android:id="@+id/up_button"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			style="@style/button"
			android:text="UP"
			android:onClick="onUp"
			android:layout_above="@+id/right_button"
			android:layout_toLeftOf="@+id/right_button"
			android:background="@drawable/up_button"/>
			
		<Button
			android:id="@+id/left_button"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			style="@style/button"
			android:text="LEFT"
			android:onClick="onLeft"
			android:layout_below="@+id/up_button"
			android:layout_toLeftOf="@+id/up_button"
			android:background="@drawable/left_button"/>
			
		<Button
			android:id="@+id/pass_button"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginRight="30dip"
			style="@style/button"
			android:text="PASS"
			android:onClick="onPass"
			android:layout_toLeftOf="@+id/left_button"
			android:layout_alignTop="@+id/left_button"
			android:background="@drawable/controller_button"/>
			
		<Button
			android:id="@+id/kick_button"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			style="@style/button"
			android:text="KICK"
			android:onClick="onKick"
			android:layout_below="@+id/pass_button"
			android:layout_alignParentLeft="true"
			android:background="@drawable/controller_button"/>
			
			
		<Button
			android:id="@+id/huddle_button"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			style="@style/button"
			android:text="HUDDLE"
			android:onClick="onHuddle"
			android:layout_above="@+id/pass_button"
			android:layout_alignParentLeft="true"
			android:background="@drawable/controller_button"/>
		
	</RelativeLayout>>	
	
</LinearLayout>
